k8s/rently-showings-monitor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rently-showings-monitor
  namespace: rently-showings-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rently-showings-monitor
  template:
    metadata:
      labels:
        app: rently-showings-monitor
    spec:
      containers:
        - name: app
          image: dekee/rently-showings-monitor:latest
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"

      volumes:
        - name: data
          emptyDir: {}
