k8s/rently-showings-monitor/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: rently-showings-monitor
spec:
  selector:
    app: postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
