k8s/rently-showings-monitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rently-showings-monitor
  namespace: rently-showings-monitor
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: rently-monitor.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rently-showings-monitor
                port:
                  number: 80
